// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareMenu does not render external share links in offline mode 1`] = `
<DocumentFragment>
  <div
    class="menu share-menu"
  >
    <a
      href="#"
    >
      Print…
    </a>
    <a
      href="#"
      id="save-as-image"
    >
      Save as image…
      <span
        class="menu-item-subtext"
      >
        For including in a report, blog, etc.
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ShareMenu renders (user not signed in, anonymous user’s street, no street name) 1`] = `
<DocumentFragment>
  <div
    class="menu share-menu"
  >
    <div
      class="share-sign-in-promo"
    >
      <a
        href="#"
      >
        Sign in
      </a>
       for nicer links to your streets and your personal street gallery
    </div>
    <div
      class="share-via-link-container"
    >
      Copy and paste this link to share:
      <div
        class="share-via-link-form"
      >
        <input
          class="share-via-link"
          readonly=""
          spellcheck="false"
          type="text"
          value="http://localhost/"
        />
        <button
          title="Copy to clipboard"
        >
          <svg
            class="octicon"
          />
        </button>
      </div>
    </div>
    <a
      class="share-via-twitter"
      href="https://twitter.com/intent/tweet?text=Check%20out%20this%20street%20on%20Streetmix!&url=http%3A%2F%2Flocalhost%2F"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        class="svg-inline--fa menu-item-icon fa-twitter"
      />
      Share using Twitter
    </a>
    <a
      class="share-via-facebook"
      href="https://www.facebook.com/dialog/feed?app_id=undefined&redirect_uri=http%3A%2F%2Flocalhost%2F&link=http%3A%2F%2Flocalhost%2F&name=Unnamed%20St%20%E2%80%93%20Streetmix&description=Check%20out%20this%20street%20on%20Streetmix!"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        class="svg-inline--fa menu-item-icon fa-facebook-square"
      />
      Share using Facebook
    </a>
    <a
      href="#"
    >
      Print…
    </a>
    <a
      href="#"
      id="save-as-image"
    >
      Save as image…
      <span
        class="menu-item-subtext"
      >
        For including in a report, blog, etc.
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ShareMenu renders (user signed in, own street, with name) 1`] = `
<DocumentFragment>
  <div
    class="menu share-menu"
  >
    <div
      class="share-via-link-container"
    >
      Copy and paste this link to share:
      <div
        class="share-via-link-form"
      >
        <input
          class="share-via-link"
          readonly=""
          spellcheck="false"
          type="text"
          value="http://localhost/"
        />
        <button
          title="Copy to clipboard"
        >
          <svg
            class="octicon"
          />
        </button>
      </div>
    </div>
    <a
      class="share-via-twitter"
      href="https://twitter.com/intent/tweet?text=Check%20out%20my%20street%2C%20bar%2C%20on%20Streetmix!&url=http%3A%2F%2Flocalhost%2F"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        class="svg-inline--fa menu-item-icon fa-twitter"
      />
      Share using Twitter
    </a>
    <a
      class="share-via-facebook"
      href="https://www.facebook.com/dialog/feed?app_id=undefined&redirect_uri=http%3A%2F%2Flocalhost%2F&link=http%3A%2F%2Flocalhost%2F&name=bar%20%E2%80%93%20Streetmix&description=Check%20out%20my%20street%2C%20bar%2C%20on%20Streetmix!"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        class="svg-inline--fa menu-item-icon fa-facebook-square"
      />
      Share using Facebook
    </a>
    <a
      href="#"
    >
      Print…
    </a>
    <a
      href="#"
      id="save-as-image"
    >
      Save as image…
      <span
        class="menu-item-subtext"
      >
        For including in a report, blog, etc.
      </span>
    </a>
  </div>
</DocumentFragment>
`;
